# Automated-Enhanced-Model-Card-Generation

./: .gitignore  README.md  SUPPLEMENTARY_MATERIAL.md  pyproject.toml  requirements.txt
classifier/: __init__.py  core.py  models.py
classifier/resources/: paragraph_schema.json
evaluator/: __init__.py  core.py  modal_app.py  modal_client.py  models.py
evaluator/resources/: reproducibility_checklist.json
generator/: __init__.py  core.py  models.py
generator/resources/: section_specs.json
outputs/full_pipeline_eval/: task_stratified_generated_cards.jsonl  task_stratified_reproducibility_reports_full.jsonl
preprocessor/: __init__.py  core.py  markdown_preprocessor.py  models.py  paper_preprocessor.py  table_summarizer.py
retriever/: __init__.py  arxiv_client.py  core.py  github_client.py  hf_client.py  link_extractor.py  models.py  paper_parser.py
sample_preview/: new_all_repos_both_links.csv  new_preprocessed_mc.csv
webapp/: app.py  sample_cards.py
webapp/static/: index.html
